Header and navigation

--- a/app/assets/stylesheets/_colors.css.scss
+++ b/app/assets/stylesheets/_colors.css.scss
@@ -1,6 +1,8 @@
 /*Basic colors of the palette*/
-$palette-dark-brown: #180F01;
-$palette-medium-brown: #2A2111;
-$palette-light-brown: #956C1F;
-$palette-grey: #A3906D;
-$palette-white: #FFFBF5;
+$palette-dark: #382313;
+$palette-medium-dark: #58351A;
+$palette-medium: #2E221F;
+$palette-meium-light: #F7EDBF;
+$palette-light: #F1EED9;
+
+$header-height: 50px;
