--- a/app/views/authors/index.html.haml
+++ b/app/views/authors/index.html.haml
@@ -10,4 +10,4 @@
       %td= author.name
       %td= author.biography
       %td= author.birth_year
-      %td= author.nationality
+      %td= author.birth_country
