--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,10 +1,33 @@
 @import "colors";
+@import "mixins";
+
+body {
+  background-color: $palette-light !important;
+}
 
 .header {
-	display: block;
-	position: fixed;
-	width: 100%;
-	height: 40px;
-	background-color: $palette-dark-brown;
-	color: $palette-white;
+  display: block;
+  font-family: 'Special Elite', cursive;
+  position: fixed;
+  width: 100%;
+  height: $header-height;
+  @include gradient_background(90deg, $palette-dark, 30%, $palette-medium-dark, 70%, $palette-dark);
+  color: $palette-light;
+  z-index: 10;
+}
+
+.header_logo {
+  margin: 0 auto;
+  width: 165px;
+  line-height: $header-height;
+  font-weight: bold;
+  font-size: 18px;
+  text-decoration: none !important;
+  i {
+    padding-right: 5px;
+  }
+}
+
+.navbar {
+  padding-top: $header-height;
 }
