--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 %html
   %head
+    %link{href: 'http://fonts.googleapis.com/css?family=Special+Elite', rel: 'stylesheet', type: 'text/css'} 
     %title= 'Welcome to the your Bookshelf'
     = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true 
     = javascript_include_tag "application", "data-turbolinks-track" => true    
     = csrf_meta_tags
   %body
     .header= render "shared/header"
+    = render "shared/navbar" 
     .container
-      = yield
+      .row-fluid
+        .span8
+          =yield
+        .span4
