--- a/app/views/books/index.html.haml
+++ b/app/views/books/index.html.haml
@@ -1,9 +1,2 @@
 %h1= "Listing all Books"
-%table
-	%tr
-		%th= "Name"
-		%th= "Description"
-	- @books.each do |book|
-		%tr
-			%td= book.name
-			%td= book.description
+=render "shared/books_table", books: @books
