--- a/app/views/shared/_navbar.html.haml
+++ b/app/views/shared/_navbar.html.haml
@@ -1,7 +1,7 @@
 .navbar
   .navbar-inner
     %ul.nav
-      %li= link_to("Books", books_path) 
-      %li= link_to("Authors", authors_path)
-      %li= link_to("Genres", genres_path)
-  
+      = nav_link 'Home', root_path
+      = nav_link 'Books', books_path
+      = nav_link 'Authors', authors_path
+      = nav_link 'Genres', genres_path  
