--- a/app/views/genres/index.html.haml
+++ b/app/views/genres/index.html.haml
@@ -1,9 +1,2 @@
 %h1= "Listing all Genres"
-%table
-  %tr
-    %th= "Name"
-    %th= "Description"
-  - @genres.each do |genre|
-    %tr
-      %td= genre.name
-      %td= genre.description
+=render "shared/genres_table", genres: @genres
