--- a/app/views/shared/_books_table.html.haml
+++ b/app/views/shared/_books_table.html.haml
@@ -11,4 +11,4 @@
         %td= book.author.name
         %td= book.language.name
 
-= will_paginate @books, :class => 'pager', renderer: BootstrapPagination::Rails
+= will_paginate @books
