--- a/app/views/shared/_genres_table.html.haml
+++ b/app/views/shared/_genres_table.html.haml
@@ -7,4 +7,4 @@
       %tr
         %td= link_to genre.name, genre_path(genre)
 
-= will_paginate @genres, :class => 'pager', renderer: BootstrapPagination::Rails
+= will_paginate @genres
