--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,3 +15,4 @@
           =yield
         .span4
           =render "shared/sidebar", latest_books: @latest_books
+    .footer= render "shared/footer"
