--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -88,6 +88,21 @@ a {
 }
 /*************PAGER END********************/
 
+/*************BOOK INFO *******************/
+.book-information {
+  .book-image {
+    margin-right: 10px;
+  }
+  h4 { 
+    margin-bottom: 25px;
+  }
+}
+
+.book-description {
+  margin: 22px 0 15px 0;
+}
+/*************BOOK INFO END****************/
+
 /*************FOOTER***********************/
 .footer {
   background-color: $palette-medium;
