--- a/app/views/books/show.html.haml
+++ b/app/views/books/show.html.haml
@@ -1,6 +1,12 @@
-%p
-  %strong= "Name of the Book"
-  = @book.name
-%p
-  %strong= "Description"
+.book-information
+  .book-image.pull-left= image_tag @book.image.url(:medium)
+  %h4= @book.name
+  .book-data= "Written by #{@book.author.name}"
+  .book-data= "Published in #{@book.published_year}"
+  .book-data= "Written in #{@book.language.name}"
+  .book-data.clearfix= "ISBN: #{@book.isbn}"
+.book-description
+  %strong= "The book is about:"
+  %br
   = @book.description
+= render "shared/book_genres", genres: @book.genres
