genres views modified

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -118,6 +118,12 @@ a {
 }
 /*************BOOK INFO END****************/
 
+/*************GENRE INFO*******************/
+.genre-description {
+  margin: 10px 0;
+}
+/*************GENRE INFO END***************/
+
 /*************FOOTER***********************/
 .footer {
   background-color: $palette-medium;
