new look and feek for the application

--- a/app/views/shared/_navbar.html.haml
+++ b/app/views/shared/_navbar.html.haml
@@ -1,9 +1,15 @@
-.nav-collapse.collapse
-  .navbar
-    .navbar-inner
-      %ul.nav
-        = nav_link 'Home', root_path
-        = nav_link 'Books', books_path
-        = nav_link 'Authors', authors_path
-        = nav_link 'Genres', genres_path  
-      =render "shared/login_bar"
+.navbar
+  .navbar-inner
+    .container
+      %a.btn.btn-navbar{:"data-toggle" => "collapse", :"data-target" => ".nav-collapse"}
+        %span.icon-bar
+        %span.icon-bar
+        %span.icon-bar
+      %a.brand{:href => "#"}
+        %i.icon-book.icon-white
+        My Bookshelf
+      .nav-collapse.collapse
+        %ul.nav
+          = nav_link 'Books', books_path
+          = nav_link 'Authors', authors_path
+          = nav_link 'Genres', genres_path  
