--- a/app/views/shared/_navbar.html.haml
+++ b/app/views/shared/_navbar.html.haml
@@ -13,3 +13,4 @@
           = nav_link 'Books', books_path
           = nav_link 'Authors', authors_path
           = nav_link 'Genres', genres_path  
+        =render "shared/login_bar"
