--- a/app/views/shared/_navbar.html.haml
+++ b/app/views/shared/_navbar.html.haml
@@ -10,6 +10,7 @@
         My Bookshelf
       .nav-collapse.collapse
         %ul.nav
+          = nav_link 'Home', root_path          
           = nav_link 'Books', books_path
           = nav_link 'Authors', authors_path
           = nav_link 'Genres', genres_path  
