--- a/app/views/shared/_navbar.html.haml
+++ b/app/views/shared/_navbar.html.haml
@@ -14,4 +14,5 @@
           = nav_link 'Books', books_path
           = nav_link 'Authors', authors_path
           = nav_link 'Genres', genres_path  
+          = nav_link 'Bookcases', bookcases_path, true
         =render "shared/login_bar"
