--- a/app/views/forms/_create_bookcase_form.html.haml
+++ b/app/views/forms/_create_bookcase_form.html.haml
@@ -1,6 +1,5 @@
-= form_for("bookcase", :url => new_bookcase_path) do |f|
+= form_for("bookcase", url: bookcases_path, remote: true) do |f|
   .input-append
     = f.text_field :name, :class => "span3", :id => "appendedInputButton"
-    = f.hidden_field(:user_id, :value => user.id)
     %button{:type => "submit", :class => "btn btn-info" }
       Create Bookcase
