new bookcase list view

--- a/app/views/bookcases/create.js.haml
+++ b/app/views/bookcases/create.js.haml
@@ -1,1 +1,2 @@
-$("#bookcases").append('#{@bookcase.name}');
+$("#bookcases").append("#{j render(partial: 'shared/bookcase', locals: {bookcase: @bookcase})}");
+$("form #bookcase_name").val("");
