--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -135,3 +135,23 @@ a {
   line-height: $footer-height;
 }
 /*************FOOTER END*******************/
+
+
+/*************BOOKCASE*******************/
+
+#bookcases {
+  padding-top: 20px;
+}
+
+.bookcase-teaser {
+  width: 115px;
+  margin-right: 10px;
+}
+
+.bookcase-name {
+  text-align: center;
+  padding-top: 5px;
+  font-weight: bold;
+}
+
+/*************BOOKCASE END*******************/
