--- a/app/views/forms/_create_bookcase_form.html.haml
+++ b/app/views/forms/_create_bookcase_form.html.haml
@@ -1,5 +1,4 @@
 = form_for("bookcase", url: bookcases_path, remote: true) do |f|
-  .input-append
-    = f.text_field :name, :class => "span3", :id => "appendedInputButton"
-    %button{:type => "submit", :class => "btn btn-info" }
-      Create Bookcase
+  = f.text_field :name, :class => "input-medium search-query span5"
+  %button{:type => "submit", :class => "btn btn-inverse" }
+    Create Bookcase
