Modal window to add bookcases unfinished

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -154,4 +154,10 @@ a {
   font-weight: bold;
 }
 
+.add-bookcase {
+  a, a:link, a:visited {
+    color: white;
+  }
+}
+
 /*************BOOKCASE END*******************/
