--- a/app/views/shared/_add_to_bookcase_icon.html.haml
+++ b/app/views/shared/_add_to_bookcase_icon.html.haml
@@ -1,4 +1,4 @@
-- if user_signed_in?
+- if user_signed_in? && @bookcases.count > 0
   .add-bookcase
     .btn-toolbar
       .btn-group
@@ -10,7 +10,7 @@
       %button.close{type: "button", :"data-dismiss" => "modal", :"aria-hidden" => "true"}= "x"
       %h3{id: "myModalLabel"}= "My Bookcases"
     .modal-body
-      %p= "One Fine Body"
+      %p= "Select the bookcase you want:"
+      = render "forms/add_book_to_bookcase_form", book: @book, bookcases: @bookcases
     .modal-footer
       %button.btn{:"data-dismiss" => "modal", :"aria-hidden" => "true"}= "Close"
-      %button.btn.btn-primary= "Save Changes"
