--- a/app/views/bookcases/show.html.haml
+++ b/app/views/bookcases/show.html.haml
@@ -1,4 +1,4 @@
 .bookcase-name
   %h4= "Your books in '#{@bookcase.name }'" 
 
-= render "shared/bookcase_view", books: @bookcase.books, paginate: true
+= render "shared/bookcase_view", books: @books, paginate: true
