--- a/app/views/shared/_bookcase_view.html.haml
+++ b/app/views/shared/_bookcase_view.html.haml
@@ -2,3 +2,5 @@
   - books.each do |book|
     = link_to book_path(book) do
       .book-in-shelf.pull-left= image_tag(book.image.url(:small))
+
+= will_paginate books if paginate
